--- a/CurrencyCalc/MainWindow.xaml
+++ b/CurrencyCalc/MainWindow.xaml
@@ -3,10 +3,52 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:sys="clr-namespace:System;assembly=mscorlib"
         xmlns:local="clr-namespace:CurrencyCalc"
-        mc:Ignorable="d"
-        Title="Currency calculator" Height="500" Width="800">
+        mc:Ignorable="d" FontSize="18" FontFamily="Segoe UI" FontWeight="Light"
+        Title="Currency calculator" Height="315" Width="770">
     <Grid>
-
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="20"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="auto" MinWidth="190"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="10"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="auto" MinWidth="190"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="20"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="20"/>
+        </Grid.RowDefinitions>
+        <Label x:Name="lblDate" Content="Choose date:" Grid.Column="1" Grid.Row="1" Margin="5,10"/>
+        <DatePicker x:Name="datePicker" Grid.Column="2" Grid.Row="1" Margin="10,10" SelectedDate="{x:Static sys:DateTime.Now}"/>
+        <TextBlock Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="7"
+                   Text="Choose the currencies you would like to exchange:" Margin="10,0,0,10"/>
+        <TextBlock Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="3"
+                   Text="Base currency:" Margin="10,0,0,10" FontWeight="SemiBold"/>
+        <TextBlock Grid.Column="5" Grid.Row="4" Grid.ColumnSpan="3"
+                  Text="Target currency:" Margin="10,0,0,10" FontWeight="SemiBold"/>
+        <Label x:Name="lblBaseCurrencyAmount" Content="Amount:" Grid.Column="1" Grid.Row="5" Margin="10,0"/>
+        <TextBox x:Name="txtBaseCurrencyAmount" Grid.Column="1" Grid.Row="6" MinWidth="150" Margin="10,5"/>
+        <Label x:Name="lblBaseCurrencyList" Content="Currency:" Grid.Column="2" Grid.Row="5" Margin="10,0"/>
+        <ComboBox x:Name="BaseCurrencyList" Grid.Column="2" Grid.Row="6" MinWidth="100" Margin="10,5"></ComboBox>
+        <Label x:Name="lblTargetCurrencyAmount" Content="Amount:" Grid.Column="5" Grid.Row="5" Margin="10,0"/>
+        <TextBox x:Name="txtTargetCurrencyAmount" Grid.Column="5" Grid.Row="6" MinWidth="150" Margin="10,5"/>
+        <Label x:Name="lblTargetCurrencyList" Content="Currency:" Grid.Column="6" Grid.Row="5" Margin="10,0"/>
+        <ComboBox x:Name="TargetCurrencyList" Grid.Column="6" Grid.Row="6" MinWidth="100" Margin="10,5"></ComboBox>
+        <Button x:Name="btnCalculate" Content="Calculate" Grid.Column="1" Grid.Row="7" Grid.ColumnSpan="7" Margin="10,10"/>
     </Grid>
 </Window>
+ 
