--- a/CurrencyCalc/MainWindow.xaml
+++ b/CurrencyCalc/MainWindow.xaml
@@ -1,4 +1,5 @@
 ﻿<Window x:Class="CurrencyCalc.MainWindow"
+        xmlns:vm="clr-namespace:CurrencyCalc.ViewModels"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,6 +8,9 @@
         xmlns:local="clr-namespace:CurrencyCalc"
         mc:Ignorable="d" FontSize="18" FontFamily="Segoe UI" FontWeight="Light"
         Title="Currency calculator" Height="315" Width="770">
+    <Window.DataContext>
+        <vm:CurrencyCalcViewModel/>
+    </Window.DataContext>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20"/>
@@ -33,23 +37,27 @@
             <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
         <Label x:Name="lblDate" Content="Choose date:" Grid.Column="1" Grid.Row="1" Margin="5,10"/>
-        <DatePicker x:Name="datePicker" Grid.Column="2" Grid.Row="1" Margin="10,10" SelectedDateChanged="datePicker_SelectedDateChanged"/>
-        <TextBlock x:Name="tbDateComments" Grid.Column="3" Grid.Row="1" Grid.ColumnSpan="5" Grid.RowSpan="2"
-                  Text="{Binding DatePickerComments}" Margin="10,10" FontSize="14" Foreground="Red" />
+        <DatePicker x:Name="datePicker" Grid.Column="2" Grid.Row="1" Margin="10,10" 
+                    SelectedDate="{Binding SelectedDate, UpdateSourceTrigger=PropertyChanged}"
+                    DisplayDateEnd="{x:Static sys:DateTime.Now}"/>
+        <TextBlock x:Name="tbDateComments" Grid.Column="3" Grid.Row="1" Grid.ColumnSpan="4" Grid.RowSpan="2" Margin="10,10" FontSize="14" TextWrapping="WrapWithOverflow " Width="300"
+                   Text="{Binding DatePickerComments}" 
+                   Foreground="Red" />
         <TextBlock Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="7"
                    Text="Choose the currencies you would like to exchange:" Margin="10,0,0,10"/>
         <TextBlock Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="3"
                    Text="Base currency:" Margin="10,0,0,10" FontWeight="SemiBold"/>
         <TextBlock Grid.Column="5" Grid.Row="4" Grid.ColumnSpan="3"
-                  Text="Target currency:" Margin="10,0,0,10" FontWeight="SemiBold"/>
+                   Text="Target currency:" Margin="10,0,0,10" FontWeight="SemiBold"/>
         <Label x:Name="lblBaseCurrencyAmount" Content="Amount:" Grid.Column="1" Grid.Row="5" Margin="10,0"/>
         <TextBox x:Name="txtBaseCurrencyAmount" Grid.Column="1" Grid.Row="6" MinWidth="150" Margin="10,5"/>
         <Label x:Name="lblBaseCurrencyList" Content="Currency:" Grid.Column="2" Grid.Row="5" Margin="10,0"/>
-        <ComboBox x:Name="BaseCurrencyList" Grid.Column="2" Grid.Row="6" MinWidth="100" Margin="10,5" ItemsSource="{Binding Rates}" SelectedItem="{Binding SelectedCurrency, UpdateSourceTrigger=PropertyChanged}">
+        <ComboBox x:Name="BaseCurrencyList" Grid.Column="2" Grid.Row="6" MinWidth="100" Margin="10,5" ItemsSource="{Binding Rates}" SelectedItem="{Binding SelectedBaseCurrency, UpdateSourceTrigger=PropertyChanged}">
             <ComboBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
                         <TextBlock Text="{Binding Currency}"/>
+                        <TextBlock Text=" - "/>
                         <TextBlock Text="{Binding Code}"/>
                     </StackPanel>
                 </DataTemplate>
@@ -58,7 +66,17 @@
         <Label x:Name="lblTargetCurrencyAmount" Content="Amount:" Grid.Column="5" Grid.Row="5" Margin="10,0"/>
         <TextBox x:Name="txtTargetCurrencyAmount" Grid.Column="5" Grid.Row="6" MinWidth="150" Margin="10,5"/>
         <Label x:Name="lblTargetCurrencyList" Content="Currency:" Grid.Column="6" Grid.Row="5" Margin="10,0"/>
-        <ComboBox x:Name="TargetCurrencyList" Grid.Column="6" Grid.Row="6" MinWidth="100" Margin="10,5"></ComboBox>
+        <ComboBox x:Name="TargetCurrencyList" Grid.Column="6" Grid.Row="6" MinWidth="100" Margin="10,5" ItemsSource="{Binding Rates}" SelectedItem="{Binding SelectedTargetCurrency, UpdateSourceTrigger=PropertyChanged}">
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{Binding Currency}"/>
+                        <TextBlock Text=" - "/>
+                        <TextBlock Text="{Binding Code}"/>
+                    </StackPanel>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
         <Button x:Name="btnCalculate" Content="Calculate" Grid.Column="1" Grid.Row="7" Grid.ColumnSpan="7" Margin="10,10"/>
     </Grid>
 </Window>
