--- a/CurrencyCalc/MainWindow.xaml
+++ b/CurrencyCalc/MainWindow.xaml
@@ -50,9 +50,11 @@
         <TextBlock Grid.Column="5" Grid.Row="4" Grid.ColumnSpan="3"
                    Text="Target currency:" Margin="10,0,0,10" FontWeight="SemiBold"/>
         <Label x:Name="lblBaseCurrencyAmount" Content="Amount:" Grid.Column="1" Grid.Row="5" Margin="10,0"/>
-        <TextBox x:Name="txtBaseCurrencyAmount" Grid.Column="1" Grid.Row="6" MinWidth="150" Margin="10,5"/>
+        <TextBox x:Name="txtBaseCurrencyAmount" Grid.Column="1" Grid.Row="6" MinWidth="150" Margin="10,5" 
+                    Text="{Binding BaseCurrencyAmountText, UpdateSourceTrigger=PropertyChanged}"/>
         <Label x:Name="lblBaseCurrencyList" Content="Currency:" Grid.Column="2" Grid.Row="5" Margin="10,0"/>
-        <ComboBox x:Name="BaseCurrencyList" Grid.Column="2" Grid.Row="6" MinWidth="100" Margin="10,5" ItemsSource="{Binding Rates}" SelectedItem="{Binding SelectedBaseCurrency, UpdateSourceTrigger=PropertyChanged}">
+        <ComboBox x:Name="BaseCurrencyList" Grid.Column="2" Grid.Row="6" MinWidth="100" Margin="10,5" 
+                    ItemsSource="{Binding Rates}" SelectedItem="{Binding SelectedBaseCurrency, UpdateSourceTrigger=PropertyChanged}">
             <ComboBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
@@ -64,7 +66,7 @@
             </ComboBox.ItemTemplate>
         </ComboBox>
         <Label x:Name="lblTargetCurrencyAmount" Content="Amount:" Grid.Column="5" Grid.Row="5" Margin="10,0"/>
-        <TextBox x:Name="txtTargetCurrencyAmount" Grid.Column="5" Grid.Row="6" MinWidth="150" Margin="10,5"/>
+        <TextBox x:Name="txtTargetCurrencyAmount" IsEnabled="False" Grid.Column="5" Grid.Row="6" MinWidth="150" Margin="10,5"/>
         <Label x:Name="lblTargetCurrencyList" Content="Currency:" Grid.Column="6" Grid.Row="5" Margin="10,0"/>
         <ComboBox x:Name="TargetCurrencyList" Grid.Column="6" Grid.Row="6" MinWidth="100" Margin="10,5" ItemsSource="{Binding Rates}" SelectedItem="{Binding SelectedTargetCurrency, UpdateSourceTrigger=PropertyChanged}">
             <ComboBox.ItemTemplate>
@@ -77,7 +79,7 @@
                 </DataTemplate>
             </ComboBox.ItemTemplate>
         </ComboBox>
-        <Button x:Name="btnCalculate" Content="Calculate" Grid.Column="1" Grid.Row="7" Grid.ColumnSpan="7" Margin="10,10"/>
+        <Button x:Name="btnCalculate" Content="Calculate" Command="{Binding CalculateRatesCommand}" Grid.Column="1" Grid.Row="7" Grid.ColumnSpan="7" Margin="10,10"/>
     </Grid>
 </Window>
  
