--- a/CurrencyCalc/App.xaml
+++ b/CurrencyCalc/App.xaml
@@ -4,6 +4,97 @@
              xmlns:local="clr-namespace:CurrencyCalc"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style x:Key="ComboboxButtonStyle" TargetType="{x:Type ToggleButton}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ToggleButton}">
+                        <Border   
+                             Background="White"   
+                             x:Name="border"   
+                             CornerRadius="0,5,5,0"   
+                             BorderThickness="0,1,1,1"  
+                             BorderBrush="Black">
+                            <ContentPresenter />
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <Style x:Key="ComboboxTextBoxStyle" TargetType="{x:Type TextBox}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type TextBox}">
+                        <Grid>
+                            <Border CornerRadius="5,0,0,5"  
+                               BorderThickness="1,1,0,1"  
+                               Background="{TemplateBinding Background}"  
+                               BorderBrush="Black">
+                                <ScrollViewer x:Name="PART_ContentHost"/>
+                            </Border>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <Style x:Key="ComboboxStyle" TargetType="{x:Type ComboBox}">
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ComboBox}">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition MaxWidth="18"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBox Name="PART_EditableTextBox"  
+                                Style="{StaticResource ComboboxTextBoxStyle}"  
+                                Padding="5,0,0,0"  
+                                Height="{TemplateBinding Height}"/>
+                            <ToggleButton Grid.Column="1" Margin="0"  
+                               Height="{TemplateBinding Height}"  
+                               Style="{StaticResource ComboboxButtonStyle}"  
+                               Focusable="False"  
+                               IsChecked="{Binding Path=IsDropDownOpen, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"  
+                               ClickMode="Press">
+                                <Path Grid.Column="1"  
+                                  HorizontalAlignment="Center"  
+                                  VerticalAlignment="Center"  
+                                  Data="M 0 0 L 4 4 L 8 0 Z"  
+                                  Fill="DodgerBlue" />
+                            </ToggleButton>
+                            <ContentPresenter Name="ContentSite"  
+                               Content="{TemplateBinding SelectionBoxItem}"  
+                               ContentTemplate="{TemplateBinding SelectionBoxItemTemplate}"  
+                               ContentTemplateSelector="{TemplateBinding ItemTemplateSelector}"  
+                               VerticalAlignment="Center"  
+                               HorizontalAlignment="Left"  
+                               Margin="5,0,0,0"/>
+                            <Popup Name="Popup"  
+                               Placement="Bottom"  
+                               IsOpen="{TemplateBinding IsDropDownOpen}"  
+                               AllowsTransparency="True" 
+                               Focusable="False"  
+                               PopupAnimation="Slide">
+                                <Grid Name="DropDown"  
+                                     SnapsToDevicePixels="True"          
+                                     MinWidth="{TemplateBinding ActualWidth}"  
+                                     MaxHeight="{TemplateBinding MaxDropDownHeight}">
+                                    <Border   
+                                       x:Name="DropDownBorder"  
+                                       BorderThickness="1"  
+                                       CornerRadius="5"
+                                       Background="White"
+                                       BorderBrush="Black"/>
+                                    <ScrollViewer Margin="4,6,4,6" SnapsToDevicePixels="True">
+                                        <StackPanel IsItemsHost="True" KeyboardNavigation.DirectionalNavigation="Contained" />
+                                    </ScrollViewer>
+                                </Grid>
+                            </Popup>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Application.Resources>
 </Application>
