--- a/CurrencyCalc/App.xaml
+++ b/CurrencyCalc/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="CurrencyCalc.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:CurrencyCalc"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:CurrencyCalc">
     <Application.Resources>
         <Style x:Key="ComboboxButtonStyle" TargetType="{x:Type ToggleButton}">
             <Setter Property="Template">
